--- a/share-goods/package.json
+++ b/share-goods/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@react-firebase/database": "^0.3.10",
+    "axios": "^0.18.0",
     "firebase": "^5.8.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-axios": "^2.0.3",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
@@ -23,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "lite-server": "^2.4.0"
+  }
 }
