--- a/share-goods/package.json
+++ b/share-goods/package.json
@@ -10,6 +10,8 @@
     "react": "^16.7.0",
     "react-axios": "^2.0.3",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-scripts": "2.1.3"
   },
   "scripts": {
