--- a/share-goods/package.json
+++ b/share-goods/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.3.0",
     "react-lazy-load-image-component": "^1.3.2",
+    "react-notifications": "^1.4.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
